Change version on package.json

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "seneca-seraph",
   "version": "1.0.1",
-  "description": "Seneca plugin for seraph lib to connect a neo4j database",
+  "description": "Seneca plugin for seraph lib to connect a neo4j database.",
   "main": "index.js",
   "scripts": {
     "test": "lab -e development -v -l"
